# autodiff

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
autodiff/common/: eigen.hpp
autodiff/forward/: eigen.hpp
autodiff/reverse/: eigen.hpp  reverse.hpp
examples/reverse/: example-reverse-gradient-derivatives-using-eigen.cpp  example-reverse-hessian-derivatives-using-eigen.cpp  example-reverse-higher-order-derivatives-multi-variable-function.cpp  example-reverse-higher-order-derivatives-single-variable-function.cpp  example-reverse-multi-variable-function-with-parameters.cpp  example-reverse-multi-variable-function.cpp  example-reverse-single-variable-function.cpp
qnum/: CMakeLists.txt  cnn.hpp  common.hpp  data.hpp  eigen.hpp  entry.hpp  flex.hpp  inspect.cpp  mlp.hpp  nn.hpp  plot_train.gp  qnum.hpp  rewritetest.cpp  split_log.sh  split_log_word2vec.sh  test.cpp  torch_cnn.py  train.cpp
test/: reverse.test.cpp
verilog/: qnum.xpr
verilog/qnum.srcs/: Booth_Multiplier_4x.v  carry4.v  f16_mul.v  f32_add.v  f32_to_f16.txt  i16_add.v  i32_add.v  i8_add.v  q16_add.v  q16_mul.v  q16_scaleup.v
verilog/qnum.srcs/sim_1/new/: tb_qnum.v
