add_executable(test test.cpp)
add_executable(train train.cpp)
target_compile_definitions(test PRIVATE EIGEN_MATRIXBASE_PLUGIN=\"${CMAKE_CURRENT_SOURCE_DIR}/matrix.hpp\")
target_include_directories(test PRIVATE ${CMAKE_SOURCE_DIR} ${EIGEN3_INCLUDE_DIR})
target_include_directories(train PRIVATE ${CMAKE_SOURCE_DIR} ${EIGEN3_INCLUDE_DIR})
